# ai-perp-dex

./: .aria_credentials  .gitignore  .ralphrc  AI_NATIVE_SPEC.md  ARCHITECTURE.md  AUDIT_REPORT.md  DEPLOYMENT_REPORT.md  Dockerfile  FRONTEND_SPEC.md  P2P_ROADMAP.md  PRD.md  QA_REPORT.md  QA_REPORT_FINAL.md  README.md  REDIS_TASK.md  ROADMAP.md  SCALING_PLAN.md  SECURITY_REPORT.md  STATUS.md  TEST_REPORT.csv  TEST_SUMMARY.md  TODO.md  VISION.md  VISION_V2.md  config.json  docker-compose.yml  journey_test.py  nginx.conf  package.json  security_test.py  stress_test_20_agents.py  stress_test_50_agents.py  stress_test_conservative.py  stress_test_final.py  stress_test_v2.py  test_token_config.json
.ralph/: PROMPT.md  fix_plan.md
PRD/: .ralph_conversion_prompt.md  .ralphrc
agent-sdk/python/: requirements.txt  setup.py
agent-sdk/python/ai_perp_dex/: __init__.py  agent.py  client.py  p2p.py  types.py
agent-sdk/python/ai_perp_dex.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
agent-sdk/python/examples/: moltbook_agent.py  trading_agent.py
agents/: mm_agent.py  trader_agent.py
api-server/: Cargo.toml
api-server/src/: auth.rs  handlers.rs  main.rs  risk.rs  types.rs
cli/: index.js  package-lock.json  package.json
deploy/: .env.example  fly.toml  nginx.conf  railway.json
devnet-test/: create_test_token.py  deposit.py  full_test.py  initialize.py  integration_test.py  register_agent.py  test_close_position.py  test_devnet.py  test_open_position.py  test_open_trade.py  test_trading.py  test_withdraw.py  update_and_deposit.py
docs/: AI_NATIVE_DESIGN.md  API.md  DEPLOYMENT.md  DEVELOPMENT.md  ORACLE.md  PRD.md
escrow-program/: Anchor.toml  Cargo.toml
escrow-program/programs/escrow/: Cargo.toml
escrow-program/programs/escrow/src/: errors.rs  lib.rs  state.rs
frontend/: .env.example  Dockerfile  README.md  next.config.mjs  package-lock.json  package.json  tailwind.config.ts
frontend/scripts/: ui_assert.sh  ui_smoke.sh  ui_smoke_prod.sh
frontend/src/app/: HomeClient.tsx  error.tsx  globals.css  layout.tsx  not-found.tsx  page.tsx  providers.tsx
frontend/src/components/: AIIntentBar.tsx  DebugView.tsx  ErrorBoundary.tsx  Header.tsx  LivingNetwork.tsx  MarketCard.tsx  PositionCard.tsx  SystemStatus.tsx  TradeForm.tsx  TradingDashboard.tsx  index.ts
frontend/src/hooks/: useAiPerpDex.ts  useWebSocket.ts
frontend/src/lib/: api.ts  config.ts  types.ts  utils.ts  websocket.ts
intent-protocol/: AIP-1.md  intent_parser.py  intent_router.py
intent-protocol/adapters/: base_adapter.py  moltbook_adapter.py
intent-protocol/core/: standard.py
matching-engine/: Cargo.toml
matching-engine/src/: agent.rs  api.rs  engine.rs  lib.rs  main.rs  order.rs  orderbook.rs  rest_api.rs  risk.rs  types.rs
mm-agents/: README.md  aggressive_mm.py  arbitrage_mm.py  conservative_mm.py
moltmarket-skill/: SKILL.md  sdk.py  skill.json
moltmarket-skill/sdk/python/: README.md
openclaw-plugin/: README.md  SKILL.md  package-lock.json  package.json
openclaw-plugin/src/: client.ts  index.ts  types.ts
openclaw-plugin/src/tools/: account.ts  market.ts  signal.ts  social.ts  trade.ts
scripts/: bridge_to_hl.py  gemini_50_agents_test.sh  price_fetcher.py  run_50_agents_test.sh  test_50_agents.py
sdk/: README.md  package-lock.json  package.json
sdk/examples/: basic-usage.ts  trading.ts
sdk/idl/: perp_escrow.json
sdk/python/: README.md  example.py  perp_dex.py  pyproject.toml  requirements.txt  setup.py
sdk/python/ai_perp_dex/: __init__.py  client.py  exceptions.py  legacy_client.py  mm.py  models.py  trader.py
sdk/python/ai_perp_dex.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
sdk/python/docs/: API.md
sdk/python/examples/: demo.py
sdk/python/tests/: __init__.py  conftest.py  test_client.py  test_types.py
sdk/src/: client.ts  idl.json  index.ts  pdas.ts  types.ts
sdk/typescript/: README.md  package-lock.json  package.json  tsconfig.json
sdk/typescript/src/: index.ts
settlement-service/: server.py
solana-program/: Anchor.toml  Cargo.lock.pin  Cargo.toml
solana-program/programs/ai-perp-dex/: Cargo.toml
solana-program/programs/ai-perp-dex/src/: errors.rs  lib.rs  oracle.rs  state.rs
solana-program/programs/ai-perp-dex/src/instructions/: close_position.rs  create_market.rs  deposit.rs  initialize.rs  liquidate.rs  mod.rs  open_position.rs  register_agent.rs  settle_pnl.rs  update_collateral.rs  update_position_pnl.rs  withdraw.rs
tests/: TEST_SUMMARY.md  agent_test.sh  full_test.py  security_test.py  security_test.sh  stress_test_conservative.py  stress_test_final.py  test_agent.py  test_integration.py
trade-router/: Cargo.toml
trade-router/data/: trade-router.db
trade-router/src/: db.rs  demo_mm.rs  funding.rs  handlers.rs  incentives.rs  liquidation.rs  main.rs  margin.rs  middleware.rs  price_feed.rs  settlement.rs  solana_settlement.rs  state.rs  types.rs  websocket.rs
trading-hub/: .dockerignore  .env.example  API_SPEC.md  Dockerfile  __init__.py  demo_full_system.py  demo_signal_betting.py  perp_dex.db  pyproject.toml  requirements.txt  run.sh
trading-hub/agents/: __init__.py  autonomous_trader.py  intent_aggregator.py
trading-hub/api/: __init__.py  models.py  server.py
trading-hub/config/: assets.py
trading-hub/db/: __init__.py  database.py  redis_store.py  store.py
trading-hub/middleware/: __init__.py  auth.py  rate_limit.py
trading-hub/scripts/: stress_test.py
trading-hub/sdk/: __init__.py  ai_native_sdk.py  tradinghub.py
trading-hub/services/: agent_comms.py  agent_runtime.py  backtester.py  circles.py  copy_trade.py  external_router.py  fee_service.py  funding.py  historical_data.py  hyperliquid_client.py  intent_parser.py  liquidation_engine.py  logger.py  pnl_tracker.py  position_manager.py  price_feed.py  rate_limiter.py  reputation.py  risk_limits.py  settlement.py  signal_betting.py  skill_marketplace.py  solana_client.py  solana_escrow.py  vault.py
trading-hub/tests/: test_api.py  test_core_functions.py  test_intent_parser.py
trading-hub/web/: gemini_dashboard.html  index.html
(+34 files in other folders)
