[package]
name = "ai-perp-dex-api"
version = "0.1.0"
edition = "2021"
description = "AI Perp DEX - REST API Server for AI Agents"

[dependencies]
# Web framework
axum = { version = "0.7", features = ["ws"] }
tower-http = { version = "0.5", features = ["cors", "trace"] }
tokio = { version = "1", features = ["full"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Utils
uuid = { version = "1.0", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Crypto
ed25519-dalek = "2.0"
bs58 = "0.5"

# Optional: Database
# sqlx = { version = "0.7", features = ["runtime-tokio", "postgres"] }
# redis = "0.24"
