[package]
name = "ai-perp-dex-matching-engine"
version = "0.1.0"
edition = "2021"
description = "High-performance orderbook matching engine for AI Perp DEX"
authors = ["Aria <aria@ai-perp-dex.xyz>"]

[dependencies]
# Core
tokio = { version = "1.35", features = ["full"] }
async-trait = "0.1"
thiserror = "1.0"
anyhow = "1.0"

# Data structures
rust_decimal = { version = "1.33", features = ["serde"] }
rust_decimal_macros = "1.33"
ordered-float = "4.2"
indexmap = { version = "2.1", features = ["serde"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Networking
axum = { version = "0.7", features = ["ws"] }
tower = "0.4"
tower-http = { version = "0.5", features = ["cors", "trace"] }

# WebSocket
tokio-tungstenite = "0.21"
futures-util = "0.3"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Time
chrono = { version = "0.4", features = ["serde"] }

# Crypto
ed25519-dalek = "2.1"
sha2 = "0.10"
hex = "0.4"

# Database
sqlx = { version = "0.7", features = ["runtime-tokio", "postgres", "chrono", "rust_decimal"] }
redis = { version = "0.24", features = ["tokio-comp", "connection-manager"] }

# Metrics
prometheus = "0.13"

[dev-dependencies]
criterion = { version = "0.5", features = ["async_tokio"] }
proptest = "1.4"

# [[bench]]
# name = "orderbook_benchmark"
# harness = false

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
