[workspace]
members = ["programs/*"]
resolver = "2"

[profile.release]
overflow-checks = true
lto = "fat"
codegen-units = 1

[profile.release.build-override]
opt-level = 3
incremental = false
codegen-units = 1

# Pin packages to avoid edition2024 requirement which is not supported by SBF toolchain
[workspace.dependencies]
blake3 = "=1.5.4"
