[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "ai-perp-dex"
version = "0.1.0"
description = "SDK for AI agents to trade perpetuals P2P"
requires-python = ">=3.9"
dependencies = [
    "httpx>=0.25.0",
    "websockets>=12.0",
    "pydantic>=2.0",
    "ed25519>=1.5",
]

[project.optional-dependencies]
dev = ["pytest", "pytest-asyncio"]
