[package]
name = "escrow"
version = "0.1.0"
description = "P2P Perpetual Trading Escrow Program (MVP)"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "escrow"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = "0.28.0"

# Lock versions to avoid edition2024 requirement
blake3 = "=1.5.0"
constant_time_eq = "=0.3.0"
