[package]
name = "ai-perp-dex"
version = "0.1.0"
description = "AI Perp DEX - Solana Settlement Program"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "ai_perp_dex"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]

[dependencies]
anchor-lang = { version = "0.32", features = ["init-if-needed"] }
anchor-spl = "0.32"
